Write ops for blinds
