# controller/things_operation_controller.js
@@ -6,7 +6,6 @@ import db from '../models'
 import ThingsMappingRepo from '../repo/things_mapping_repo'
 import ThingsConfigRepo from '../repo/things_config_repo'
 import ProviderFactory from '../provider/ProviderFactory';
-const ThingTypeDb = db.things_config
 
 class ThingsOperationController {
 
@@ -124,7 +123,6 @@ class ThingsOperationController {
         }
     }
 
-
     //Execute thing command
     async tstCmd(req, res, next) {
         try {
@@ -151,6 +149,90 @@ class ThingsOperationController {
         } catch (error) {
             next(error);
         }
+    }
+
+
+    // Excute thing command to blinds
+    async writeToblinds(req, res, next) {
+        try {
+            const thingIds = req.body.thing_ids;
+            const identifier = req.body.identifier;
+            const target_function = req.body.target_function;
+            const command = req.body.command;
+            const argValue = req.body.argValue;
+
+            const getThingType = await ThingsConfigRepo.findBlindConfig(thingIds, identifier);
+
+            if (typeof getThingType !== 'undefined' && getThingType !== null) {
+                for (let item of getThingType) {
+                    const commandProtocol = item.command_protocal;
+                    const protocol = new ProviderFactory();
+                    protocol.getProvider(commandProtocol);
+                    item.target_function = target_function;
+                    item.command = command;
+                    item.argValue = argValue;
+                    protocol.provider.executeBlindsCommand(item, res)
+                }
+                res.status(200).json({
+                    statusCode: 200,
+                    status: "success",
+                    message: "Things command executed successfully.",
+                    data: {}
+                });
+            } else {
+                res.status(404).json({
+                    status: "error",
+                    message: "Things configuration not found.",
+                    statusCode: 404
+                });
+            }
+
+        } catch (error) {
+            next(error);
+        }
+    }
+
+    async readBlindState(req, res, next) {
+
+        try {
+            const thingIds = req.body.thing_ids;
+            const identifier = req.body.identifier;
+            const target_function = req.body.target_function;
+            const command = req.body.command;
+            const getThingType = await ThingsConfigRepo.findBlindConfig(thingIds, identifier);
+            if (typeof getThingType !== 'undefined' && getThingType !== null) {
+                let arrayValue = new Array();
+                for (let item of getThingType) {
+                    const commandProtocol = item.command_protocal;
+                    const protocol = new ProviderFactory();
+                    protocol.getProvider(commandProtocol);
+                    item.target_function = target_function;
+                    item.command = command;
+                    const value = await protocol.provider.read(item, res);
+                    // let map = new Map();
+                    // map.set();
+                    // console.log(map);
+                    arrayValue.push({ [item.thing_id]: value.value });
+                }
+                res.status(200).json({
+                    statusCode: 200,
+                    status: "success",
+                    message: "Things command executed successfully.",
+                    data: arrayValue
+                });
+
+            } else {
+                res.status(404).json({
+                    status: "error",
+                    message: "Things mapping configuration missing in database not found.",
+                    statusCode: 404
+                });
+            }
+
+        } catch (error) {
+            next(error);
+        }
+
     }
 }
 
