# routes/things_route.js
@@ -18,5 +18,7 @@ thingsRoute.post("/mapping/create", thingsOpsController.createThingIotMappingCon
 thingsRoute.post("/execute", thingsOpsController.execute); //  update room's
 thingsRoute.post("/read", thingsOpsController.read); //  update room's
 thingsRoute.post("/tst/cmd", thingsOpsController.tstCmd); //  update room's
+thingsRoute.post("/blind/execute",thingsOpsController.writeToblinds)
+thingsRoute.post("/blind/read",thingsOpsController.readBlindState)
 
 module.exports = thingsRoute;
